--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
   {% load static %}
   <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
   <link href="{% static 'css/layout.css' %}" rel="stylesheet">
-  <title>{% block title %}{% endblock %} | QRKeeper</title>
+  <title>{% block title %}{% endblock %} | qrkeeper</title>
   <link rel="icon" href="{% static 'img/favicon.ico' %}">
 </head>
 <body>
@@ -14,7 +14,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="/">
         <img src="{% static 'img/logo.png' %}" alt="" width="30" height="30" class="d-inline-block">
-        QRKeeper
+        qrkeeper
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
