--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,12 +18,18 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        {% if request.user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="{% url 'accounts:logout' %}">Logout</a>
+        </li>
+        {% else %}
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="{% url 'accounts:login' %}">Login</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" aria-current="page" href="{% url 'accounts:register' %}">Register</a>
         </li>
+        {% endif %}
       </ul>
     </div>
   </div>
