--- a/templates/try.html
+++ b/templates/try.html
@@ -3,4 +3,15 @@
 {% block title %}Try{% endblock %}
 
 {% block body %}
+<div class="container">
+  <div class="row">
+    <form action="{% url 'try' %}" method="post">
+      {% csrf_token %}
+      <div class="input-group mb-3">
+        <input type="text" class="form-control" placeholder="Long URL ie. https://example.com" name="long_url" required>
+        <button class="btn btn-outline-secondary" type="submit">Short</button>
+      </div>
+    </form>
+  </div>
+</div>
 {% endblock %}
